---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2022-02-27
  Bugfixes:
    - Fixed a crash when starting a new freeplay game (#5)
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2022-02-24
  Features:
    - Initial release