@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.2
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed a crash when iterating a reactor with a fluid energy source
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: 2022-02-27
